v1.7/_sources/api/references.rst.txt
==========
References
==========

.. [Ambaum2020] Ambaum MHP, 2020: Accurate, simple equation for saturated vapour pressure over water and ice.
           *QJR Meteorol Soc.*; **146**: 4252–4258,
           doi: `10.1002/qj.3899 <https://doi.org/10.1002/qj.3899>`_.

.. [Anderson2013] Anderson, G. B., M. L. Bell, and R. D. Peng, 2013: Methods to
           Calculate the Heat Index as an Exposure Metric in Environmental Health
           Research. *Environmental Health Perspectives*, **121**, 1111-1119,
           doi: `10.1289/ehp.1206273 <https://doi.org/10.1289/ehp.1206273>`_.

.. [Bakhshaii2013] Bakhshaii, A. and R. Stull, 2013: Saturated pseudoadiabats--A
           noniterative approximation. *J. Appl. Meteor. Clim.*, **52**, 5-15,
           doi:`10.1175/JAMC-D-12-062.1 <https://doi.org/10.1175/JAMC-D-12-062.1>`_.

.. [Barnes1964] Barnes, S. L., 1964: A technique for maximizing details in numerical weather
           map analysis. *J. Appl. Meteor. Climatol.*, **3**, 396-409,
           doi:`10.1175/1520-0450(1964)003%3C0396:ATFMDI%3E2.0.CO;2
           <https://doi.org/10.1175/1520-0450(1964)003%3C0396:ATFMDI%3E2.0.CO;2>`_.

.. [Bluestein1992] Bluestein, H. B., 1992: *Principles of Kinematics and Dynamics.
           Vol. 1, Synoptic-Dynamic Meteorology in Midlatitudes*. Oxford University Press,
           448 pp.

.. [Bluestein1993] Bluestein, H. B., 1993: *Observations and Theory of Weather Systems.
           Vol. 2, Synoptic-Dynamic Meteorology in Midlatitudes*. Oxford University Press,
           608 pp.

.. [Bolton1980] Bolton, D., 1980: The computation of equivalent potential
           temperature. *Mon. Wea. Rev.*, **108**, 1046-1053,
           doi:`10.1175/1520-0493(1980)108%3C1046:TCOEPT%3E2.0.CO;2
           <https://doi.org/10.1175/1520-0493(1980)108%3C1046:TCOEPT%3E2.0.CO;2>`_.

.. [Bowen2005] Bowen, M. K. and R. Smith, 2005: Derivative formulae and errors for
           non-uniformly spaced points. *Proc. R. Soc. A*, **461**, 1975-1997,
           doi:`10.1098/rspa.2004.1430 <https://doi.org/10.1098/rspa.2004.1430>`_.

.. [Bunkers2000] Bunkers, M. J., B. A. Klimowski, J. W. Zeitler, R. L. Thompson,
           and M. L. Weisman, 2000: Predicting supercell motion using a new hodograph
           technique. *Wea. Forecasting.*, **15**, 61–79,
           doi:`10.1175/1520-0434(2000)015\<0061:PSMUAN\>2.0.CO;2
           <https://doi.org/10.1175/1520-0434(2000)015\<0061:PSMUAN\>2.0.CO;2>`_.

.. [Corfidi2003] Corfidi, S. F., 2003: Cold Pools and MCS Propagation:
            Forecasting the Motion of Downwind-Developing MCSs.
            *Wea. Forecasting.*, **18**, 997–1017,
            doi:`10.1175/1520-0434(2003)018\<0997:CPAMPF\>2.0.CO;2
            <https://doi.org/10.1175/1520-0434(2003)018\<0997:CPAMPF\>2.0.CO;2>`_.

.. [CODATA2018] Tiesinga, Eite, Peter J. Mohr, David B. Newell, and Barry N. Taylor, 2020:
           The 2018 CODATA Recommended Values of the Fundamental Physical Constants
           (Web Version 8.1). Database developed by J. Baker, M. Douma, and S. Kotochigova.
           Available at https://physics.nist.gov/cuu/Constants/index.html,
           National Institute of Standards and Technology, Gaithersburg, MD 20899.

.. [Cressman1959] Cressman, G. P., 1959: An operational objective analysis system. *Mon.
           Wea. Rev.*, **87**, 367-374,
           doi:`10.1175/1520-0493(1959)087%3C0367:AOOAS%3E2.0.CO;2
           <https://doi.org/10.1175/1520-0493(1959)087%3C0367:AOOAS%3E2.0.CO;2>`_.

.. [DaviesJones2009] Davies-Jones, R., 2009: On Formulas for Equivalent Potential Temperature.
           *Mon. Wea. Rev.*, **137**, 3137-3148,
           doi: `10.1175/2009mwr2774.1 <https://doi.org/10.1175/2009MWR2774.1>`_.

.. [DaviesJones2008] Davies-Jones, R., 2008: An Efficient and Accurate Method for Computing the Wet-Bulb Temperature along Pseudoadiabats.
           *Mon. Wea. Rev.*, **136**, 2764-2785,
           doi: `10.1175/2007mwr2224.1 <https://doi.org/10.1175/2007MWR2224.1>`_.

.. [DoswellSchultz2006] Doswell, C. A. III, and D. M. Schultz, 2006: `On the Use of Indices and
           Parameters in Forecasting Severe Storms <https://ejssm.org/archives/2006/vol-1-3-2006/>`_.
           *Electronic J. Severe Storms Meteor.*, **1** (3), 1-22.

.. [Emanuel1994] Emanuel, K. A., 1994: Atmospheric Convection. Oxford University Press, 592 pp.

.. [Esterheld2008] Esterheld, J. M. and D. J. Giuliano, 2008: `Discriminating between Tornadic and
           Non-Tornadic Supercells: A New Hodograph Technique <https://ejssm.org/archives/2008/vol-3-2-2008/>`_.
           *Electronic J. Severe Storms Meteor.*, **3** (2), 1-50.

.. [Fan1987] Fan, J., 1987: Determination of the psychrometer coefficient A of the WMO
           reference psychrometer by comparison with a standard gravimetric hygrometer.
           *J. Atmos. Oceanic Technol.*, **4**, 239-244,
           doi:`10.1175/1520-0426(1987)004%3C0239:DOTPCO%3E2.0.CO;2
           <https://doi.org/10.1175/1520-0426(1987)004%3C0239:DOTPCO%3E2.0.CO;2>`_.

.. [FCMR192003] Federal Coordinator for Meteorological Services and Supporting Research: Report
           on Wind Chill Temperature and Extreme Heat Indices: Evaluation and Improvement
           Projects. Washington, DC: Office of the Federal Coordinator for Meteorological
           Services and Supporting Research, 2003.
           `FCM-R19-2003 <../_static/FCM-R19-2003-WindchillReport.pdf>`_, 75 pp.

.. [Galvez2015] Galvez, J. M. and Michel Davison, 2015. “The Gálvez-Davison Index for Tropical
            Convection.” `GDI_Manuscript_V20161021
            <https://www.wpc.ncep.noaa.gov/international/gdi/GDI_Manuscript_V20161021.pdf>`_.

.. [Galway1956] Galway, J. G., 1956: The Lifted Index as a Predictor of Latent Instability.
           *American Meteorology Society*,
           doi:`10.1175/1520-0477-37.10.528
           <https://doi.org/10.1175/1520-0477-37.10.528>`_.

.. [Garratt1994] Garratt, J.R., 1994: *The Atmospheric Boundary Layer*. Cambridge
           University Press, 316 pp.

.. [George1960] George, J.J., 1960: *Weather Forecasting for Aeronautics*. New York and
           London Academic Press, 673 pp.

.. [Hobbs1977] Hobbs, P. V., and J. M. Wallace, 1977: *Atmospheric Science: An
           Introductory Survey*. Academic Press, 350 pp.

.. [Hobbs2006] Hobbs, P. V., and J. M. Wallace, 2006: *Atmospheric Science: An Introductory
           Survey*. 2nd ed. Academic Press, 504 pp.

.. [Holton2004] Holton, J. R., 2004: *An Introduction to Dynamic Meteorology*. 4th ed.
           Academic Press, 535 pp.

.. [Huber2021] Huber, S., 2020: Persistent Homology in Data Science.
           *Proc. Int. Data Sci. Conf.*, doi:`10.1007/978-3-658-32182-6_13
           <https://doi.org/10.1007/978-3-658-32182-6_13>`_.
           `[PDF] <https://www.sthu.org/research/publications/files/Hub20.pdf>`_

.. [IAPWS1995] The International Association for the Properties of Water and Steam, 1995:
           `Revised Release on the IAPWS Formulation 1995 for the Thermodynamic Properties
           of Ordinary Water Substance for General and Scientific Use (updated
           2018) <../_static/IAPWS95-2018.pdf>`_.

.. [IAPWS2001] The International Association for the Properties of Water and Steam, 2001:
           `Guideline on the Use of Fundamental Physical Constants and Basic Constants of
           Water (updated 2020) <../_static/fundam.pdf>`_.

.. [IAU2012] IAU Division I Working Group Numerical Standards, 2012: `RESOLUTION B2 on
           the re-definition of the astronomical unit of length
           <../_static/Res_IAU2012_B2.pdf>`_.

.. [Knox2017] Knox, John A., David S. Nevius, and Pamela N. Knox., 2017: Two Simple and
              Accurate Approximations for Wet-Bulb Temperature in Moist Conditions, with
              Forecasting Applications. *Bulletin of the American Meteorological Society*,
              **98.9**, 1897-1906, doi:
              `10.1175/BAMS-D-16-0246.1 <https://doi.org/10.1175/BAMS-D-16-0246.1>`_.

.. [Koch1983] Koch, S. E., M. DesJardins, and P. J. Kocin, 1983: An interactive Barnes
           objective map analysis scheme for use with satellite and conventional data.
           **J. Appl. Meteor. Climatol.**, *22*, 1487-1503,
           doi:`10.1175/1520-0450(1983)022%3C1487:AIBOMA%3E2.0.CO;2
           <https://doi.org/10.1175/1520-0450(1983)022%3C1487:AIBOMA%3E2.0.CO;2>`_.

.. [Kopp2011] Kopp, G., and Lean, J. L., 2011: A new, lower value of total solar irradiance:
           Evidence and climate significance. *Geophys. Res. Lett.*, **38**, L01706,
           `doi:10.1029/2010GL045777 <https://doi.org/10.1029/2010GL045777>`_.

.. [Lackmann2011] Lackmann, G., 2011: *Midlatitude Synoptic Meteorology*. Amer. Meteor. Soc.,
           345 pp.

.. [Liang2010] Liang, L., and D. Hale, 2010: *A Stable and Fast Implementation
           of Natural Neighbor Interpolation*. Center for Wave Phenomena `CWP-657
           <https://cwp.mines.edu/wp-content/uploads/sites/112/2018/09/cwp-657.pdf>`_, 14 pp.

.. [Markowski2010] Markowski, P. and Y. Richardson, 2010: *Mesoscale Meteorology in the
           Midlatitudes*. Wiley, 430 pp.

.. [Miller1972] Miller, R. C, 1972: *Notes on Analysis and Severe-Storm Forecasting Procedures
           of the Air Force Global Weather Central*. `AD0744042
           <../_static/Miller1972.pdf>`_.

.. [Moritz2000] Moritz, H., 2000: Geodetic Reference System 1980.
           *Journal of Geodesy* **74**, 128-133, doi:`10.1007/s001900050278
           <https://doi.org/10.1007/s001900050278>`_.

.. [Majumdar2024] Majumdar, Sharan, 2024: `Curvature and Shear Vorticity in Cartesian
           Coordinates <../_static/Majumdar-2024-curvature-vorticity.pdf>`_, 2pp.

.. [NOAA1976] National Oceanic and Atmospheric Administration, National Aeronautics and
           Space Administration, and U. S. Air Force, 1976: `U. S. Standard Atmosphere 1976
           <https://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/19770009539.pdf>`_,
           U.S. Government Printing Office, Washington, DC.

.. [NWS10201] 2017: `National Weather Service Instruction 10-201 <../_static/NWS_10-201.pdf>`_.

.. [Philips1957] Philips, N. A., 1957: A coordinate system having some special
           advantages for numerical forecasting. *J. Meteor.*, **14**, 184-185,
           doi:`10.1175/1520-0469(1957)014%3C0184:ACSHSS%3E2.0.CO;2
           <https://doi.org/10.1175/1520-0469(1957)014%3C0184:ACSHSS%3E2.0.CO;2>`_.

.. [Picard2008] Picard, A., R. S. Davis, M. Gläser, and K. Fujii, 2008: Revised formula
           for the density of moist air (CIPM-2007), *Metrologia*, **45**, No. 2, `doi:
           10.1088/0026-1394/45/2/004 <https://doi.org/10.1088/0026-1394/45/2/004>`_.

.. [Rochette2006] Rochette, Scott M., and Patrick S. Market. "A primer on the
                  ageostrophic wind." Natl. Weather Dig. 30 (2006): 17-28.

.. [Romps2017] Romps, D. M., 2017: Exact Expression for the Lifting Condensation Level.
            *J. Atmos. Sci.*, **74**, 3891–3900,
            doi: `10.1175/JAS-D-17-0102.1. <https://doi.org/10.1175/JAS-D-17-0102.1.>`_.

.. [Rothfusz1990] Rothfusz, L.P.: *The Heat Index "Equation"*. Fort Worth, TX: Scientific
           Services Division, NWS Southern Region Headquarters, 1990.
           `SR90-23 <../_static/rothfusz-1990-heat-index-equation.pdf>`_, 2 pp.

.. [Salby1996] Salby, M. L., 1996: *Fundamentals of Atmospheric Physics*.
           Academic Press, 627 pp.

.. [Schultz1999] Schultz, D. M. and P. N. Schumacher, 1999: The Use and Misuse of Conditional
           Symmetric Instability. Mon. Wea. Rev., 127, 2709–2732,
           doi:`10.1175/1520-0493(1999)127%3C2709%3ATUAMOC%3E2.0.CO;2
           <https://doi.org/10.1175/1520-0493(1999)127%3C2709%3ATUAMOC%3E2.0.CO;2>`_.

.. [Smithsonian1951] Smithsonian Institution and List, Robert J. 1951:
           `Smithsonian meteorological tables <../_static/Smithsonian1951.pdf>`_ *Smithsonian
           Miscellaneous Collections*, **144**, 151 pp.

.. [Steadman1979] Steadman, R.G., 1979: The assessment of sultriness. Part I: A
           temperature-humidity index based on human physiology and clothing
           science. *J. Appl. Meteor.*, **18**, 861-873,
           doi:`10.1175/1520-0450(1979)018%3C0861:TAOSPI%3E2.0.CO;2
           <https://doi.org/10.1175/1520-0450(1979)018%3C0861:TAOSPI%3E2.0.CO;2>`_.

.. [Thompson2004] Thompson, R.L., R. Edwards, and C. M. Mead, 2004b: `An update to the
           supercell composite and significant tornado parameters
           <https://www.spc.noaa.gov/publications/thompson/stp_scp.pdf>`_. Preprints,
           22nd Conf. on Severe Local Storms, Hyannis, MA, Amer. Meteor. Soc.

.. [USAF1990] United States Air Force, 1990: `The Use of the Skew T Log P Diagram for Weather
            Forecasting <../_static/USAF_SkewT_manual.pdf>`_, Scott AFB,
            Illinois.

.. [Ziv1994] Ziv, B., and Alpert, P., 1994: Isobaric to Isentropic Interpolation Errors
           and Implication to Potential Vorticity Analysis. *J. Appl. Meteor.*, **33**,
           694-703, doi:`10.1175/1520-0450(1994)033%3C0694:ITIIEA%3E2.0.CO;2
           <https://doi.org/10.1175/1520-0450(1994)033%3C0694:ITIIEA%3E2.0.CO;2>`_.

.. [WMO8] WMO, 2020: Guide to Meteorological Instruments and Methods of Observation,
           Volume 1: Measurement of Meteorological Variables.
           `WMO No.8 <https://library.wmo.int/idurl/4/41650>`_.

.. [WMO306] WMO, 2011: Manual on Codes - International Codes, Volume I.1, Annex II to the WMO
           Technical Regulations: Part A - Alphanumeric Codes. `WMO No.306 <https://library.wmo.int/idurl/4/35713>`_.

.. [WMO1966] WMO, 1966: International Meteorological Tables,
           `WMO-No. 188.TP.94 <https://library.wmo.int/idurl/4/59923>`_.
